# youtube-downloader

./: .gitignore  pyproject.toml
yt_downloader/: main.py
yt_downloader/core/: YTDownloader.py  config.py
yt_downloader/gui/: main_window.py
yt_downloader/gui/components/: base_component.py  features_section.py  hero_section.py  info_section.py  input_section.py
yt_downloader/gui/styles/: colors.py
